Fixed color of challenges menu sub item on mobile version Added arrow to auth dropdown menu Fixed incorrect request url on stations page Changed UserPage content dropdown overlay (deprecated) to menu Fixed ResizeObserver loop completed with undelivered notifications bug Deleted unnecessary styles of "Додати гурток" button

--- a/src/App.less
+++ b/src/App.less
@@ -1073,6 +1073,14 @@ span.anticon.anticon-home.icon {
   color: #fff;
 }
 
+.ant-menu-submenu-vertical .challenge-text {
+  color: #000;
+}
+
+.ant-menu-submenu-vertical .anticon-crown{
+  color: #000 !important;
+}
+
 .challenge-text:hover {
   color: #fff;
 }
